# pam_tacplus

./: .build.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  SECURITY.md  auto.sh  config.h.in  configure  configure.ac  lgtm.yml  libtac-event.pc.in  libtac.pc.in  pam_tacplus.c  pam_tacplus.h  pam_tacplus.spec.in  sample.pam  sonar-project.properties  support.c  support.h  tacc.1  tacc.c  test.sh
.builds/: asan.yml  bionic.yml  bullseye.yml  fedora.yml  focal.yml  freebsd.yml  jammy.yml  lts.yml  oldlts.yml  ubuntu-oldlts.yml  ubuntu.yml
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  coverity.yml  release.yaml  sonar.yml
debian/: README.Debian  changelog  control  copyright  dirs  docs  files  libpam-tacplus.install  libpam-tacplus.postinst  libpam-tacplus.prerm  libtac-dev.install  libtac5-bin.install  postinst  prerm  rules  tacplus  watch
debian/upstream/: metadata  signing-key.asc
doc/: diagram.viz
lib/: .gitignore  .gitignore~  Makefile.am  Makefile.gnulib  Makefile.in  alloca.h  fcntl.h  limits.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
lib/sys/: random.h  socket.h  stat.h  types.h  uio.h
libtac/: COPYING.LGPL
libtac/include/: cdefs.h  libtac.h  tacplus.h
libtac/lib/: acct_r.c  acct_s.c  attrib.c  authen_r.c  authen_s.c  author_r.c  author_s.c  connect.c  cont_s.c  crypt.c  hdr_check.c  header.c  magic.c  magic.h  md5.c  md5.h  messages.c  messages.h  parse.c  read_wait.c  session.c  version.c  wrappers.c  xalloc.c  xalloc.h  xstrncpy.c
m4/: .gitignore  .gitignore~  gnulib-cache.m4  gnulib-comp.m4
test/: freebsd.pam.conf  linux.pam.conf  tac_plus.conf  tac_plus.probono.conf  tac_plus.shrubbery.conf  tacc.sh  test
test/bionic/: pam.conf  tac_plus.conf  test1.expect  test2.expect  tests.expect
test/freebsd/: tac_plus.conf  test2.expect  tests.expect
tests/: TESTS  runtests.c
tests/fixtures/probono/: tac_plus.conf
tests/fixtures/shrubbery/: tac_plus.conf
tests/libtac/: c-acct.c  c-author.c  c-basic  c-basic.c  c-chap.c  c-login.c  c-pap.c
tests/pam_tacplus/: bionic.expect  freebsd.expect  pam-t
tests/tap/: basic.c  basic.h
