# Makefile.am for use with gnulib per and libtool
# https://www.gnu.org/software/gnulib/manual/html_node/Modified-build-rules.html
#
# To import, and generate new Makefile.gnulib
#
# gnulib-tool --makefile-name=Makefile.gnulib --libtool --import \
#                fcntl crypto/md5 array-list list xlist getrandom realloc explicit_bzero xalloc
#
# To update:
#
# gnulib-tool --libtool  --update

noinst_HEADERS =
noinst_LIBRARIES = 
noinst_LTLIBRARIES = 
BUILT_SOURCES =
SUFFIXES = 
MOSTLYCLEANFILES = 
MOSTLYCLEANDIRS = 
CLEANFILES = 
DISTCLEANFILES = 
AM_CPPFLAGS =
EXTRA_DIST =

include Makefile.gnulib
